fixing the distance label

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <button onclick = "randomCity()">Go!</button>
         <ul id="screensLabels">
-            <li>FlightTime</li>
-            <li id = "min">Flight Km's</li>
+            <li id = "distance">Flight Km's</li>
+            <li id = "min">Flight Time</li>
         </ul>
         <div id = "map">
             <img src="./img/map.jpg" alt="map" id="img"/>
