adding labels to all flight and warning system

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
          </form>  
 
          <label id = "destination">Distanation City:</label>
+         <button id = "randomCity"onclick = "randomCity()">Go!</button>
 
         </div>
-        <button onclick = "randomCity()">Go!</button>
         <ul id="screensLabels">
             <li id = "distance">Flight Km's</li>
             <li id = "min">Flight Time</li>
@@ -58,7 +58,7 @@
             </div>
 
         </div>
-        <p id = "info"></p>
+        <p id = "info">------------</p>
         <div style = "text-align:center">
         <label >Altitude</label><br>
         <input type="range" min="0" max="12000" value="0" class="slider" id="AltitudeRange">
