adding a traject of the flight and removing the planes they caused extention of the divmap (scroll div)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          </form>  
 
          <label id = "destination">Distanation City:</label>
-         <button id = "randomCity"onclick = "randomCity()">Go!</button>
+         <button id = "randomCity">Go!</button>
 
         </div>
         <ul id="screensLabels">
@@ -61,7 +61,7 @@
         <p id = "info">------------</p>
         <div style = "text-align:center">
         <label >Altitude</label><br>
-        <input type="range" min="0" max="12000" value="0" class="slider" id="AltitudeRange">
+        <input type="range" min="0" max="12000" value="1000" class="slider" id="AltitudeRange">
         </div>
 
         <ul>
