add some clouds to the map

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </ul>
         <div id = "map">
             <img src="./img/map.jpg" alt="map" id="img"/>
+            <img src="./img/clouds-png.png" id = "clouds_1" alt="clouds"/>
+            <img src="./img/clouds-png.png" id = "clouds_2" alt="clouds"/>
+            <img src="./img/clouds-png.png" id = "clouds_3" alt="clouds"/>
+            <img src="./img/clouds-png.png" id = "clouds_4" alt="clouds"/>
+
             <img id = "plane" src="./img/airplane-png.png" alt="plane_png"/>
 
         </div>
