--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             </div>
 
         </div>
-        <p id = "info">------------</p>
+        <label id = "info"></label>
         <div style = "text-align:center">
         <label >Altitude</label><br>
-        <input type="range" min="0" max="12000" value="1000" class="slider" id="AltitudeRange">
+        <input type="range" min="0" max="12000" value="0" class="slider" id="AltitudeRange">
         </div>
 
         <ul>
@@ -79,8 +79,7 @@
                     <button id = "speedDown" >-</button>
                 </ul>
             </div>
-            <button id = "startButton">SSpere</button>
-            <button id = "btn">Start</button>
+            <button id = "btn" disabled >Start</button>
         </ul>
 
 
